wp-content/themes/roots/assets/less/layouts/_header.less
// Navbar
@media (min-width: @grid-float-breakpoint) {
  #menu-primary-navigation {
    margin-top: 12px;
  }
}

.navbar-default {
  .navbar-brand {
    &:hover,
    &:focus {
      color: lighten(@navbar-default-brand-color, 10%);
    }
  }	

  .navbar-toggle {
    border-color: @packer-yellow;
    &:hover,
    &:focus {
      background-color: lighten(@navbar-default-bg, 5%);
    }
    .icon-bar {
      background-color: @packer-yellow;
    }

    @media(@sm) {
      margin-right: 1px;
    }
  }

  @media(@sm) {
    padding-left: @navbar-padding-horizontal;
    padding-right: @navbar-padding-horizontal;
  }
}

.navbar-header {
  .navbar-toggle {
    margin-top: 16px;
  }
}

.logo {
  margin: 0 auto;
  width: 300px;
  height: 50px;
  padding-right: 70px;
  margin-top: 10px;

	@media(@xs) { 
  	width: 250px;
  }

}

